--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -568,6 +568,7 @@ input:checked + .addToMyPreferencesStar {
 	border: 1px solid black;
     border-radius: 3px 3px 3px 3px;
     font-size: 12px;
+    z-index: 10;
 }
 [title]:hover:after{
 	left:0px;
