--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -1,3 +1,31 @@
+/*@font-face {
+    font-family: 'baloonIcons';
+    src: url('../fonts/baloon.ttf') format('truetype'),
+         url('../fonts/baloon.eot');
+}*/
+
+@font-face {
+    font-family: 'optionsIcons';
+    src: url('../fonts/icomoon.ttf') format('truetype'),
+         url('../fonts/icomoon.eot');
+}
+
+.more-options-icon {
+    font-family: 'optionsIcons'
+}
+
+.more-options-icon:before {
+    content: "\e009";
+}
+
+/*.baloon-icon {
+    font-family: 'baloonIcons';
+}
+
+.baloon-icon:before {
+    content: "\e004";
+}*/
+
 .preference {
     margin-left: 45px;
     font-family: 'Roboto Slab', serif;
@@ -11,7 +39,6 @@
 .gpii-punctuationVerbosity-row {
     display: inline;
 }
-
 
 #prompt-message {
     display:none;
@@ -159,26 +186,6 @@ input[type="radio"] + label.radioButton-right {
 input[type="radio"]:checked + label.radioButton-right {
     background: url('../images/radioButton-rightOn.png') no-repeat;
 }
-select {
-    padding:4px;
-    margin: 0;
-    -webkit-border-radius:4px;
-    -moz-border-radius:4px;
-    border-radius:3px;
-    -webkit-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
-    -moz-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
-    box-shadow: 3px 3px 3px #C4C7C7, 0 0 #fff inset;
-    background: #fff;
-    color:#404042;
-    border:2px;
-    border-style:solid;
-    border-color:#D1DDDD;
-    display: inline-block;
-    -webkit-appearance:none;
-    -moz-appearance:none;
-    appearance:none;
-    cursor:pointer;
-}
 
 html{
     background:#ECEFEF;
@@ -275,7 +282,8 @@ body {
 }
 
 .ui-menu .ui-menu-item a {
-    font-size: 75%;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 80%;
     width: 200px !important;
 }
 
@@ -293,6 +301,7 @@ body {
 
 .ui-widget .ui-widget-content {
     font-family: 'Open Sans', sans-serif;
+    font-size: 90%;
     height: 33px;
     border: solid 2px;
     border-color: #D5E1E2;
@@ -302,10 +311,16 @@ body {
 .ui-widget .ui-button {
     height: 35px;
     width: 20px;
-    margin-bottom: 3px;
+    margin-bottom: 2px;
     margin-left: -4px;
     border: solid 2px;
     border-color: #D5E1E2;
+}
+
+.ui-menu .ui-menu-item a.ui-state-focus {
+    font-weight: bold;
+    border: none;
+    background: none;
 }
 
 .ui-autocomplete {
