--- a/demos/discoveryTool/demo.css
+++ b/demos/discoveryTool/demo.css
@@ -243,25 +243,65 @@ article h2 {
     margin: 1em 0;
 }
 
-/* Discovery Tool */
+/* Discovery Tool show/hide panel bar */
 .fl-panelBar {
-    text-align: right;
     background-color: #6f7b80;
-    padding: 0.2em 1em;
     line-height: 1.3;
+    width:100%;
+    height: 2.5em;
+	overflow:hidden;
+	margin-bottom: 3px;
 }
-.fl-panelBar button {
-    background-color: #6f7b80;
-    border: 0;
+
+.fl-panelBar:hover {
+	border-top: 3px solid #FFCC00;
+	border-bottom: 3px solid #FFCC00;
+	margin-bottom: 0;	
+}
+.fl-panelBar a {
+	border: 0;
     color: white;
     font-weight: bold;
     cursor: pointer;
+    width: 100%;
+    text-align: right;
+	display: inline-block;
+	padding: 0.6em 3em 0 0;
+	position: relative;
+	right: 3em;
+	height: 1.8em;
 }
-.fl-panelBar button:focus {
+.fl-panelBar a:focus {
     outline: 2px solid #fff;
     color: #fff;
 }
-.fl-panelBar button::-moz-focus-inner {border:0;}
+
+.fl-panelBar a:hover {
+    text-decoration: none;
+}
+
+.fl-panelBar a::-moz-focus-inner {border:0;}
+
+.fl-panelBar span.fl-icon-discover {
+    font-family: 'DemoIcons';
+    float:right;
+    position: relative;
+    right: 0.4em;
+}
+
+.fl-panelBar span.fl-icon-discover:before {
+    content: "\e009";
+    color: #fff;
+    font-size: 2em;
+}
+
+.fl-panelBar:hover span.fl-icon-discover {
+	transform:rotate(-10deg);
+    -ms-transform:rotate(-10deg); /* IE 9 */
+    -webkit-transform:rotate(-10deg); /* Safari and Chrome */
+}
+
+/* The Discovery Tool Panel */
 
 .fl-uiOptions-discoveryTool  {
     position: fixed;
@@ -311,7 +351,7 @@ iframe::-webkit-scrollbar {
 	margin-bottom: 0.15em;
 }
 
-.fl-icon-search, .fl-icon-prev, .fl-icon-next, .fl-icon-thumbsUp, .fl-icon-thumbsDown, .fl-icon-arrow, .fl-icon-light, .fl-icon-book, .fl-icon-discover {
+.fl-icon-search, .fl-icon-prev, .fl-icon-next, .fl-icon-thumbsUp, .fl-icon-thumbsDown, .fl-icon-arrow, .fl-icon-light, .fl-icon-book {
     font-family: 'DemoIcons';
 }
 .fl-icon-search:before {
@@ -342,19 +382,6 @@ iframe::-webkit-scrollbar {
 }
 .fl-icon-book:before {
 	content: "\e007";
-}
-
-.fl-icon-discover:before {
-    content: "\e009";
-    position: relative;
-    left: -1.16em;
-    color: #fff;
-    font-size: 2em;
-}
-
-.fl-icon-discover {
-	position:relative;
-	right: -1.9em;
 }
 
 /* Images */
@@ -432,6 +459,8 @@ div.main-content-image + .fl-discoveryTool-moreText {
 	font-family: 'RobotoSlab';
 }
 
+.fl-theme-lgdg a { font-weight: normal !important; }
+
 .fl-theme-bw .main-content header #breadcrumbs,
 .fl-theme-lgdg .main-content header #breadcrumbs {
     background: none;
@@ -444,14 +473,19 @@ div.main-content-image + .fl-discoveryTool-moreText {
     background: none;
 }
 
-.fl-theme-bw .fl-panelBar button,
-.fl-theme-lgdg .fl-panelBar button {
+/* Contrast theming for Panel Bar */
+.fl-theme-bw .fl-panelBar a,
+.fl-theme-lgdg .fl-panelBar a {
 	border: none;
+	background-color: transparent !important;
 }
-.fl-theme-bw .fl-panelBar button:focus { outline-color: #fff; } 
-.fl-theme-lgdg .fl-panelBar button:focus { outline-color: #555; } 
-.fl-theme-lgdg a { font-weight: normal !important; }
+.fl-theme-bw .fl-panelBar a:focus { outline-color: #fff; } 
+.fl-theme-lgdg .fl-panelBar a:focus { outline-color: #555; } 
+.fl-theme-lgdg .fl-panelBar a,
+.fl-theme-bw .fl-panelBar a { text-decoration: none !important; }
 
+
+/* Contrast theming for Simplified content mode */
 .fl-uiOptions-content-simplified {
     /* Add padding to bottom of simplified content so it's not obscured by the DT panel bar */
     padding-bottom: 4em;
@@ -464,7 +498,7 @@ div.main-content-image + .fl-discoveryTool-moreText {
     color: #000;
 }
 
-.fl-theme-bw .fl-icon-discover:before { color: #fff; }
+.fl-theme-bw .fl-panelBar span.fl-icon-discover:before { color: #fff; }
 .fl-theme-bw .fl-icon-tree:before { text-shadow: none; }
 
 .fl-theme-lgdg .fl-icon-atom:before,
@@ -474,7 +508,7 @@ div.main-content-image + .fl-discoveryTool-moreText {
     color: #BDBDBB;
 }
 
-.fl-theme-lgdg .fl-icon-discover:before { color: #555; }
+.fl-theme-lgdg .fl-panelBar span.fl-icon-discover:before { color: #555; background-color:#BDBDBB; }
 .fl-theme-lgdg .fl-icon-tree:before { text-shadow: 1px 1px 0 #000; }
 
 .fl-theme-lgdg #main-header {
@@ -579,17 +613,3 @@ div.main-content-image + .fl-discoveryTool-moreText {
 .fl-simplify #porbital 		{height: 18.5em;}
 .fl-simplify #structure 	{height: 25.4em;}
 .fl-simplify #energylevels 	{height: 26em;  }
-
-.fl-expand-toggle-button {
-    position: absolute;
-    width: 100%;
-    top: 0px; 
-    left: 0px; 
-    height: 100%; 
-    text-align: right; 
-    padding-right: 4em;
-}
-
-.fl-icon-size {
-    font-size: 2.5em;
-}
