--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -1,13 +1,25 @@
-/*@font-face {
-    font-family: 'baloonIcons';
-    src: url('../fonts/baloon.ttf') format('truetype'),
-         url('../fonts/baloon.eot');
-}*/
+@font-face {
+    font-family: 'radioButtonIcons';
+    src: url('../fonts/blackDot.ttf') format('truetype'),
+         url('../fonts/blackDot.eot');
+}
 
 @font-face {
     font-family: 'optionsIcons';
     src: url('../fonts/icomoon.ttf') format('truetype'),
          url('../fonts/icomoon.eot');
+}
+
+@font-face {
+    font-family: 'presetButtonPackage';
+    src: url('../fonts/presetButton.ttf') format('truetype'),
+         url('../fonts/presetButton.eot');
+}
+
+@font-face {
+    font-family: 'checkboxTick';
+    src: url('../fonts/tick.ttf') format('truetype'),
+         url('../fonts/tick.eot');
 }
 
 .more-options-icon {
@@ -16,48 +28,22 @@
 
 .more-options-icon:before {
     content: "\e009";
-}
-
-/*.baloon-icon {
-    font-family: 'baloonIcons';
-}
-
-.baloon-icon:before {
-    content: "\e004";
-}*/
-
-.preference {
-    margin-left: 45px;
-    font-family: 'Roboto Slab', serif;
-    /*font-family: 'Open Sans', sans-serif;*/
-}
-
-.gpii-screenReaderBrailleOutput-description {
-    font-size: 15px;
-}
-
-.gpii-punctuationVerbosity-row {
-    display: inline;
-}
-
-#prompt-message {
-    display:none;
-    background: url('../images/baloon-empty.png') no-repeat;
-    text-align: center;
-    height: 25px;
-    width: auto;
-    padding-left: 6px;
-    padding-right: 6px;
-    background-size: 100% 100%;
-    position: fixed;
-    top: 55px;
-    margin-left: 262px;
     cursor: pointer;
 }
 
-.gpii-addOrRemovePreference-label {
-    /*display: none;*/
-    color:transparent;
+.preference {
+    padding-left: 40px;
+    font-family: 'Roboto Slab', serif;
+    background-color: #E5EFEF;
+    width: 285px;
+}
+
+.speak-text-label {
+    font-size: 19px !important;
+}
+
+.speak-text-description {
+    font-size: 15px !important;
 }
 
 .speech-rate-class {
@@ -96,7 +82,7 @@ textarea:focus, input:focus {
     display: none;
     font-size: 15px;
     font-weight: bold;
-    margin-left: 100px;
+    margin-left: 90px;
 }
 
 #screenReaderSwitch-div {
@@ -128,67 +114,145 @@ input[type="radio"] {
     display:none;
 }
 
+input[type="radio"] + label {
+    font-family: 'Open Sans', sans-serif;
+    text-transform: capitalize;
+}
+
+div.punctuationVerbosity-container {
+    height: 55px;
+    width: 250px;
+    background-color: #CEDBDD;
+    border-radius: 4%;
+    padding-top: 10px;
+    padding-left: 5px;
+}
+
+input[type="radio"] + label.radioButton-left > span.left {
+    font-family: 'radioButtonIcons';
+}
+
+input[type="radio"] + label.radioButton-left > span.left:before {
+    font-size: 150%;
+    position: absolute;
+    margin-top: -30px;
+    margin-left: -30px;
+    color: white;
+    border: solid white;
+    background-color: white;
+    border-radius: 100%;
+    border-width: thin medium;
+    content: "\e001";
+}
+
+input[type="radio"]:checked + label.radioButton-left > span.left:before {
+    color: #566273;
+    border: solid white;
+    background-color: white;
+    border-radius: 100%;
+    border-width: thin medium;
+}
+
+input[type="radio"] + label.radioButton-second > span.second {
+    font-family: 'radioButtonIcons';
+}
+
+input[type="radio"] + label.radioButton-second > span.second:before {
+    font-size: 150%;
+    position: absolute;
+    margin-top: -30px;
+    margin-left: -33px;
+    color: white;
+    border: solid white;
+    background-color: white;
+    border-radius: 100%;
+    border-width: thin medium;
+    content: "\e001";
+}
+
+input[type="radio"]:checked + label.radioButton-second > span.second:before {
+    color: #566273;
+    border: solid white;
+    background-color: white;
+    border-radius: 100%;
+    border-width: thin medium;
+}
+
+input[type="radio"] + label.radioButton-third > span.third {
+    font-family: 'radioButtonIcons';
+}
+
+input[type="radio"] + label.radioButton-third > span.third:before {
+    font-size: 150%;
+    position: absolute;
+    margin-top: -30px;
+    margin-left: -31px;
+    color: white;
+    border: solid white;
+    background-color: white;
+    border-radius: 100%;
+    border-width: thin medium;
+    content: "\e001";
+}
+
+input[type="radio"]:checked + label.radioButton-third > span.third:before {
+    color: #566273;
+    border: solid white;
+    background-color: white;
+    border-radius: 100%;
+    border-width: thin medium;
+}
+
+input[type="radio"] + label.radioButton-right > span.right {
+    font-family: 'radioButtonIcons';
+}
+
+input[type="radio"] + label.radioButton-right > span.right:before {
+    font-size: 150%;
+    position: absolute;
+    margin-top: -30px;
+    margin-left: -21px;
+    color: white;
+    border: solid white;
+    background-color: white;
+    border-radius: 100%;
+    border-width: thin medium;
+    content: "\e001";
+}
+
+input[type="radio"]:checked + label.radioButton-right > span.right:before {
+    color: #566273;
+    border: solid white;
+    background-color: white;
+    border-radius: 100%;
+    border-width: thin medium;
+}
+
 input[type="radio"] + label.radioButton-left {
-    background: url('../images/radioButton-leftOff.png') no-repeat;
-    width: auto;
-    height: auto;
-    display:inline-block;
-    position: relative;
-    font-size: 15px;
-    line-height: 30px;
-    padding-top: 25px;
-    padding-right: 20px;
-    vertical-align: center;
-}
-
-input[type="radio"]:checked + label.radioButton-left {
-    background: url('../images/radioButton-leftOn.png') no-repeat;
-}
-
-input[type="radio"] + label.radioButton-middle {
-    background: url('../images/radioButton-middleOff.png') no-repeat;
-    position: relative;
-    display:inline;
-    font-size: 15px;
-    padding-top: 29px;
-    padding-right: 10px;
-    padding-left: 10px;
+    position: absolute;
+    margin-top: 30px;
 }
 
 input[type="radio"] + label.radioButton-second {
-    margin-left: -19px;
+    margin-left: 70px;
+    position: absolute;
+    margin-top: 30px;
 }
 
 input[type="radio"] + label.radioButton-third {
-    padding-left: 15px;
-    margin-left: -5px;
-}
-
-input[type="radio"]:checked + label.radioButton-middle {
-    background: url('../images/radioButton-middleOn.png') no-repeat;
+    margin-left: 140px;
+    position: absolute;
+    margin-top: 30px;
 }
 
 input[type="radio"] + label.radioButton-right {
-    background: url('../images/radioButton-rightOff.png') no-repeat;
-    width: auto;
-    height: auto;
-    position: relative;
-    font-size: 15px;
-    display:inline-block;
-    line-height: 30px;
-    padding-top: 25px;
-    padding-right: 15px;
-    padding-left: 23px;
-    margin-left: -7px;
-    vertical-align: center;
+    margin-left: 210px;
+    position: absolute;
+    margin-top: 30px;
 }
 
-input[type="radio"]:checked + label.radioButton-right {
-    background: url('../images/radioButton-rightOn.png') no-repeat;
-}
-
-html{
-    background:#ECEFEF;
+input[type="radio"] + label {
+    font-size: 90%;
 }
 
 input[type=checkbox] {
@@ -206,63 +270,95 @@ input[type=checkbox] + label.checkbox-label {
     font-family: 'Open Sans', sans-serif;
 }
 
-input[type=checkbox] + label.pref-checkbox-label {
-    background: url('../images/star-dark.png') no-repeat;
-    height: 21px;
-    width: 21px;
-    background-size:21px 21px;
+.presetButton-icon {
+    font-family: 'presetButton';
+    font-size: 600%!important;
     position: absolute;
-    margin-left: 329px;
-    cursor: pointer;
+    color: #566374;
+    z-index: 1;
 }
 
-input[type=checkbox]:checked + label.pref-checkbox-label {
-    background: url('../images/star-light.png') no-repeat;
+.presetButton-icon:before {
+    content: "\e00d";
 }
 
-input[type=checkbox] + label.main-checkbox-label {
-    background: url('../images/speakTextOff.png') no-repeat;
-    background-size:350px 90px;
-    padding-left:30px;
-    cursor:pointer;
-    font-size: 23px;
-    text-align: center;
-    padding-left: 3px;
-    color:white;
-    display:inline-block;
-    line-height:90px;
-    height: 90px;
-    width:350px;
+.white-baloon-icon {
+    font-family: 'presetButtonPackage';
 }
 
-input[type=checkbox]:checked + label.main-checkbox-label {
-    background: url('../images/speakTextOn.png') no-repeat;
-    background-size:350px 90px;
+.white-baloon-icon:before {
+    content: "\e004";
+    position: absolute;
+    z-index: 4;
+    margin-top: 7px;
+    margin-left: 7px;
+    font-size: 70px;
+    color: white;
+}
+
+.white-tick-icon {
+    font-family: 'presetButtonPackage';
+}
+
+.white-tick-icon:before {
+    content: "\e00a";
+    position: absolute;
+    z-index: 3;
+    margin-top: 53px;
+    margin-left: 288px;
+    font-size: 20px;
+    color: #566374;
+    border: 4px solid white;
+    border-radius: 100%;
+    background-color: white;
+}
+
+input[type=checkbox] + label.preset-button-label {
+    z-index: 2;
+    position: absolute;
+    padding-left: 125px;
+    padding-top: 33px;
+    color: white;
+    background-color: #556273;
+    width: 200px;
+    height: 60px;
+}
+
+input[type=checkbox]:checked + label.preset-button-label {
     font-weight:bold;
 }
 
 input[type=checkbox] + label.checkbox-label {
-    background: url('../images/checkboxOff.png') no-repeat;
-    background-size:20px 20px;
-    padding-left:30px;
-    cursor:pointer;
-    font-size: 15px;
-    display:inline-block;
-    line-height:24px;
+    margin-left: 25px;
+    text-indent: -1.2em;
+    font-family: 'checkboxTick';
+    display: inline-block;
     width: 250px;
-    vertical-align: center;
 }
 
-input[type=checkbox] + label.long-lined-label {
-    line-height: 20px;
+input[type=checkbox] + label.checkbox-label:before {
+    content: "\e00a";
+    color: transparent;
+    border: 1px solid #556273;
+    border-radius: 4px;
+    background-color: white;
+    font-size: 75%;
 }
 
 input[type=checkbox]:checked + label.checkbox-label {
-    background: url('../images/checkboxOn.png') no-repeat;
-    background-size:20px 20px;
-    padding-left:30px;
-    cursor:pointer;
-    width: 250px;
+    font-family: 'checkboxTick';
+}
+
+input[type=checkbox]:checked + label.checkbox-label:before {
+    content: "\e00a";
+    color: white;
+    background-color: #556273;
+}
+
+.checkbox-span {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 75%;
+    padding-left: 5px;
 }
 
 input[type=checkbox] + label.more-options-label {
@@ -287,6 +383,10 @@ body {
     width: 200px !important;
 }
 
+div.ui-tooltip-content: {
+    width: 20px;
+}
+
 .ui-widget {
     font-family: 'Roboto Slab', serif;
 }
@@ -303,9 +403,14 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 90%;
     height: 33px;
-    border: solid 2px;
+    border: 2px;
     border-color: #D5E1E2;
+    border-style: solid none solid solid;
     padding-left: 10px;
+}
+
+.ui-autocomplete-input {
+    width: 219px;
 }
 
 .ui-widget .ui-button {
@@ -313,7 +418,8 @@ body {
     width: 20px;
     margin-bottom: 2px;
     margin-left: -4px;
-    border: solid 2px;
+    border: 2px;
+    border-style: solid solid solid none;
     border-color: #D5E1E2;
 }
 
@@ -435,4 +541,67 @@ body {
 .fl-uiOptions label {
     text-transform: none;
     font-size: 1.2em;
+}
+
+.fl-adjuster-icons-additional {
+    font-family: 'presetButtonPackage';
+}
+
+.addToMyPreferencesStar:before {
+    content: "\e00b";
+}
+
+.addToMyPreferencesStar {
+    margin-left: 300px;
+    margin-top: 1px;
+    color: rgb(107, 114, 129);
+    position: absolute;
+    z-index: 3;
+    font-size: 25px;
+}
+
+input:checked + .addToMyPreferencesStar {
+    color: #FAE80B;
+    border-radius: 50%;
+}
+
+.addToMyPreferencesLabel {
+    position: absolute;
+    height: 17px !important;
+    width: 17px !important;
+    cursor: pointer;
+    margin-left: 302px;
+    margin-top: 2px;
+    padding: 2px;
+    z-index: 4;
+}
+
+[title]:after{
+    background-color: #F4E413;
+    padding:5px;
+    position:absolute;
+    right: 0;
+    opacity:0;
+    bottom:100%;
+    white-space:nowrap;
+    -webkit-transition:0.25s linear opacity;
+    border: 1px solid black;
+    border-radius: 3px;
+    font-size: 12px;
+    z-index: 10;
+    float: right;
+    overflow: hidden;
+}
+[title]:hover:after{
+    opacity:2;
+}
+
+.addToMyPreferencesLabel[title]:after {
+    content:attr(tooltip-unchecked);
+    float: right;
+}
+
+input:checked + .addToMyPreferencesStar + .addToMyPreferencesLabel[title]:after {
+    content:attr(tooltip-checked);
+    float: right;
 }
