GPII-193: - fixed tabs to spaces - removed old javascript from a previous attempt to fix this issue. - removed underline hover style for panelbar link

--- a/demos/explorationTool/demo.css
+++ b/demos/explorationTool/demo.css
@@ -273,6 +273,10 @@ article h2 {
     outline: none;
 }
 
+.fl-panelBar a:hover {
+    text-decoration: none;
+}
+
 .fl-panelBar a::-moz-focus-inner {border:0;}
 
 .fl-panelBar span.fl-icon-explorationTool {
