GPII-204: Increased the margin so the more text icons do not overlap with content text when contrast themes are enabled.

--- a/src/explorationTool/css/ExplorationTool.css
+++ b/src/explorationTool/css/ExplorationTool.css
@@ -85,6 +85,12 @@
     color: #4f4f4f;
     background-color: #ffffff;
 }
+
+.fl-theme-uio-bw .fl-explorationTool-moreText details,
+.fl-theme-uio-lgdg .fl-explorationTool-moreText details {
+    margin-top: 1em;
+}
+    
 .fl-theme-uio-bw .fl-explorationTool-moreText details summary:before,
 .fl-theme-uio-bw .fl-explorationTool-moreText details {
     color: #ffffff !important;
