--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -32,6 +32,7 @@
 }
 
 .preference {
+    /*display: none;*/
     padding-left: 40px;
     font-family: 'Roboto Slab', serif;
     background-color: #E5EFEF;
@@ -48,7 +49,6 @@
 
 .speech-rate-class {
     position: relative;
-    display: none;
 }
 
 #speechRate {
@@ -79,7 +79,6 @@ textarea:focus, input:focus {
 .more-options {
     padding-top: 20px;
     cursor:pointer;
-    display: none;
     font-size: 15px;
     font-weight: bold;
     margin-left: 90px;
@@ -87,6 +86,10 @@ textarea:focus, input:focus {
 
 #screenReaderSwitch-div {
     height: 60px;
+}
+
+.partially-expanded {
+    display: none;
 }
 
 .fully-expanded {
@@ -297,6 +300,7 @@ input[type=checkbox] + label.checkbox-label {
 }
 
 .white-tick-icon {
+    position: absolute;
     font-family: 'presetButtonPackage';
 }
 
