Moved the sliding logic of Contrast to PMT.js as with increase size. Also, the markup for the Contrast header is in PMTUIOptions.html now. However, now i cannot update the model with the changed value since the checkbox and the adjuster component seem to exist in different contexts.

--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -104,7 +104,7 @@ input[type=checkbox]:checked + .headerImage > .headerImageTick{
 	content: "\e003";
 }
 
-.flc-uiOptions-contrast > .headerImage:before {
+.flc-uiOptions-contrastPanel > .headerImage:before {
 	content: "\e002";
 }
 
@@ -249,7 +249,7 @@ input[type=checkbox], input[type=radio] {
 /*
 	Style for sliding to work
 */
-.increaseSizePreferenceGroup {
+.increaseSizePreferenceGroup, .contrastPreferenceGroup {
 	padding-top: 100px;
 }
 
