--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -22,6 +22,14 @@
          url('../fonts/tick.eot');
 }
 
+.bold-font-weight {
+    font-weight: bold;
+}
+
+.normal-font-weight {
+    font-weight: normal;
+}
+
 .more-options-icon {
     font-family: 'optionsIcons'
 }
