--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -432,7 +432,7 @@ div.ui-tooltip-content: {
 }
 
 .ui-menu .ui-menu-item a.ui-state-focus {
-    font-weight: bold;
+    font-weight: bold !important;
     border: none;
     background: none;
 }
