GPII-153: Unused styles removed from style.css, a more appropriate name for some classes defined.

--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -64,7 +64,7 @@
     font-size: 15px !important;
 }
 
-.speech-rate-class {
+.speakText-speechRate-element {
     position: relative;
     padding-top: 15px;
 }
@@ -103,10 +103,6 @@ textarea:focus, input:focus {
     font-size: 15px;
     font-weight: bold;
     margin-left: 90px;
-}
-
-#screenReaderSwitch-div {
-    height: 60px;
 }
 
 .partially-expanded {
